syntax = "proto3";

package route;

option go_package = "./proto/route;route";

service Route {
	//对外提供添加服务
	rpc AddRoute(RouteInfo) returns (Response) {}
	rpc DeleteRoute(RouteId) returns (Response) {}
	rpc UpdateRoute(RouteInfo) returns (Response) {}
	rpc FindRouteByID(RouteId) returns (RouteInfo) {}
	rpc FindAllRoute(FindAll) returns (AllRoute) {}
}
message RouteInfo {
	int64 id = 1;
}

message RouteId {
	int64 id = 1;
}

message FindAll {

}

message Response {
	string msg =1 ;
}

message AllRoute {
	repeated RouteInfo route_info = 1;
}


